@@ -28,7 +28,7 @@ package ifneeded math::calculus::symdiff 1.0.1 [list source [file join $dir symd
 package ifneeded math::bigfloat          2.0.2 [list source [file join $dir bigfloat2.tcl]]
 package ifneeded math::numtheory         1.1.1 [list source [file join $dir numtheory.tcl]]
 package ifneeded math::decimal           1.0.3 [list source [file join $dir decimal.tcl]]
-package ifneeded math::geometry          1.3.0 [list source [file join $dir geometry.tcl]]
+package ifneeded math::geometry          1.3.1 [list source [file join $dir geometry.tcl]]
 package ifneeded math::trig              1.0   [list source [file join $dir trig.tcl]]
 package ifneeded math::quasirandom       1.0   [list source [file join $dir quasirandom.tcl]]
 
