@@ -1,3 +1,8 @@
+2019-08-14  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* math_geometry.man: Describe several procedures that were not described yet
+	* geometry.tcl: Export several procedures that were not exported yet
+	* pkgIndex.tcl: Bumped version of geometry package to 1.3.1
+
 2019-06-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* pdf_stat.tcl: Add procedures for triangular distribution
 	* statistics.man: Describe procedures for triangular distribution
